--- a/CPP/VsCodeC++20 Template Project/.vscode/launch.json
+++ b/CPP/VsCodeC++20 Template Project/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "c:/Projects (Programming)/CPP",
-      "program": "c:/Projects (Programming)/CPP/build/Debug/outDebug",
+      "cwd": "c:/Projects (Programming)/TemplateProjectAllCompilers",
+      "program": "c:/Projects (Programming)/TemplateProjectAllCompilers/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
