--- a/Projects/3.OperationsOnData/5.8.OutputFormatting/.vscode/settings.json
+++ b/Projects/3.OperationsOnData/5.8.OutputFormatting/.vscode/settings.json
@@ -27,5 +27,9 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+],
+"files.associations": {
+    "*.ejs": "html",
+    "ostream": "cpp"
+}
 }
